--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["uradora <meri.rajamaki@helsinki.fi>"]
 python = "^3.9"
 Flask = "^1.1.2"
 Jinja2 = "^2.11.3"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
