--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "3.9.4"
 Flask = "^1.1.2"
 Jinja2 = "^2.11.3"
 gunicorn = "^20.1.0"
+pytest = "^6.2.3"
+coverage = "^5.5"
 
 [tool.poetry.dev-dependencies]
 
