--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,13 +21,14 @@ jobs:
       - name: Install dependencies
         run: poetry install
       - name: Run tests
-        run: poetry run coverage run --branch -m pytest
+        run: poetry run coverage run -m pytest
       - name: Compose coverage report
         run: poetry run coverage xml
       - name: Report to Codecov
         run: bash <(curl -s https://codecov.io/bash)
   deploy:
     name: Deploy to Heroku staging
+    needs: test
     runs-on: ubuntu-latest
 
     steps:
