--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ gunicorn = "^20.1.0"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
 coverage = "^5.5"
+robotframework = "^4.0.1"
+robotframework-seleniumlibrary = "^5.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
