--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 Flask = "^1.1.2"
 Jinja2 = "^2.11.3"
 gunicorn = "^20.1.0"
+selenium = "^3.141.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
