--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ Flask = "^1.1.2"
 Jinja2 = "^2.11.3"
 gunicorn = "^20.1.0"
 selenium = "^3.141.0"
+Flask-SQLAlchemy = "^2.5.1"
+psycopg2 = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
