--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest = "^6.2.3"
 coverage = "^5.5"
 robotframework = "^4.0.1"
 robotframework-seleniumlibrary = "^5.1.3"
+pylint = "^2.7.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
