Robot tests run with headlesschrome in CI

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,6 +31,8 @@ jobs:
         run: poetry run coverage report --fail-under=80
       - name: Run robot tests
         run: bash run_robot_tests.sh
+        env:
+          BROWSER: headlesschrome
       - name: Compose coverage report
         if: ${{ github.event_name == 'push'}}
         run: poetry run coverage xml
