trying to add delay for the headless chrome

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,6 +33,7 @@ jobs:
         run: bash run_robot_tests.sh
         env:
           BROWSER: headlesschrome
+          DELAY: 10 seconds
       - name: Compose coverage report
         if: ${{ github.event_name == 'push'}}
         run: poetry run coverage xml
