--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ gunicorn = "^20.1.0"
 selenium = "^3.141.0"
 Flask-SQLAlchemy = "^2.5.1"
 psycopg2 = "^2.8.6"
+Flask-Login = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
