--- a/.coveragerc
+++ b/.coveragerc
@@ -1,4 +1,4 @@
 [run]
 branch = True
 source = src
-omit = src/tests/**,src/app.py,src/routes.py
+omit = src/tests/**,src/app.py,src/routes.py,src/database.py,src/login.py
